@@ -1,3 +1,8 @@
+2013-05-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* plugins/twitter/*: Added support for view conversation with
+	  in_reply_to_status_id.
+
 2013-05-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* twitter/account.py, menu.py: Added an API for accessing with
